Theme: added theme context with local storage key strategy and button toggle

--- a/src/.prettierrc.json
+++ b/src/.prettierrc.json
@@ -9,5 +9,6 @@
   "bracketSameLine": false,
   "arrowParens": "avoid",
   "endOfLine": "auto",
-  "proseWrap": "preserve"
+  "proseWrap": "preserve",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
