--- a/src/package.json
+++ b/src/package.json
@@ -36,7 +36,7 @@
     "@eslint/js": "^9.31.0",
     "@jest/globals": "^30.0.4",
     "@react-router/dev": "^7.5.3",
-    "@tailwindcss/vite": "^4.1.4",
+    "@tailwindcss/vite": "^4.1.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -65,7 +65,9 @@
     "jest": "^30.0.4",
     "jest-axe": "^10.0.0",
     "jest-environment-jsdom": "^30.0.4",
-    "tailwindcss": "^4.1.4",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.11",
     "ts-jest": "^29.4.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.36.0",
